Prevent the Query list being misaligned when the current locale is RTL based.
Props @aalakkad


commit 546e5bc9b9ca3efffd590f8574abd436c29c5b65
Merge: 2e50cb2 cb20c5c
Author: Dion Hulse <dion@wordpress.org>
Date:   Sat Apr 30 18:13:19 2016 +1000

    Merge pull request #11 from jrfnl/feature/prevent-ltr-issues
    
    Prevent the Query list being misaligned when the current locale is RTL based.
    
    Props @aalakkad

commit cb20c5c99b75405ea39215b8d91d7fee88bbaedb
Author: jrfnl <github_nospam@adviesenzo.nl>
Date:   Sun Apr 17 05:34:56 2016 +0200

    Prevent things looking weird when the current locale is RTL based.
    
    Props:
    https://wordpress.org/support/profile/aalakkad
    
    Fixes:
    https://wordpress.org/support/topic/debug-bar-and-rtl-dashboards

Synced from git://github.com/dd32/debug-bar.git


git-svn-id: https://plugins.svn.wordpress.org/debug-bar/trunk@1407979 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/debug-bar.dev.css
+++ b/css/debug-bar.dev.css
@@ -59,6 +59,7 @@
  */
 
 #querylist {
+	direction: ltr;
 	display: none;
 	position: fixed;
 	height: 33%;
